[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game assets/Title Background/Image without mist.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen/doomed.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://TitleScreen/GameTitle.gd" type="Script" id=3]
[ext_resource path="res://TitleScreen/AudioStreamPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Music and Sounds/Menu Move.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="MainMenu"]
anchor_right = 1.0
margin_bottom = 65.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenu/Title"]
margin_right = 640.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 10
text = "Babels Gambit"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
margin_left = 247.0
margin_top = 116.0
margin_right = 392.0
margin_bottom = 304.0
custom_constants/separation = 20

[node name="NewGame" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_right = 145.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "New Game"

[node name="Instructons" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 145.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
text = "How to Play"

[node name="Options" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 145.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 4 )
text = "Options"

[node name="Exit" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 145.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 4 )
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MainMenu/CenterContainer/VBoxContainer"]
stream = ExtResource( 5 )
volume_db = -23.758

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/Instructons" to="." method="_on_Instructons_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
